Fix wrapping of inputs on small screens

--- a/client/src/components/sleepEntryForm.module.css
+++ b/client/src/components/sleepEntryForm.module.css
@@ -1,10 +1,15 @@
 .sleepEntryForm {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem 1.5rem;
   color: var(--secondary-text-color);
 }
 
 .submitButton {
-  grid-column: span 2;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.input {
+  flex: 1;
 }
